--- a/DEMOJPA/src/main/resources/application.properties
+++ b/DEMOJPA/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=demojpa
 server.port=8080
 
 #Autenticacion
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/jpademo
+spring.datasource.url=jdbc:mysql://localhost:3306/jpademo
 spring.datasource.username=root
 spring.datasource.password=campus2023
 
